modified:   Server.c 	modified:   Server.exe 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 HTTP/1.0 200 OK Content-type: text/html
 
-<h1>asdasdasd</h1>
+<html>
+  <title>Test</title>
+  <body>
+    ASDADAD
+  </body>
+</html>
