new file:   .vscode/settings.json 	modified:   Server.c 	modified:   Server.exe 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 HTTP/1.0 200 OK Content-type: text/html
 
 <html>
-  <title>Test</title>
+  <title>
+    Test
+  </title>
   <body>
     ASDADAD
   </body>
